force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/Apttus_Proposal__Proposal_Request__c.object-meta.xml
<CustomObject>
    <description>Approval requests for a proposal</description>
    <label>Proposal Request</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Approval Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Proposal Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>