force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/fields/Apttus_Proposal__Approval_Action__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Approval_Action__c</fullName>
    <formula>HYPERLINK(Apttus_Proposal__s_Servlet_Directory__c&amp;"01N700000009u2a&amp;eid="&amp;Id, IMAGE(Apttus_Proposal__s_Document_Directory__c&amp;"01570000000e6nT", "Approve") ) &amp; HYPERLINK(Apttus_Proposal__s_Servlet_Directory__c&amp;"01N700000009u2o&amp;eid="&amp;Id, IMAGE(Apttus_Proposal__s_Document_Directory__c&amp;"01570000000e6nR", "Reject") )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Action</label>
    <type>Text</type>
</CustomField>