force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/fields/Apttus_Proposal__s_Document_Directory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__s_Document_Directory__c</fullName>
    <formula>"/servlet/servlet.FileDownload?file="</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>s_Document Directory</label>
    <type>Text</type>
</CustomField>