force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/fields/Apttus_Proposal__s_Servlet_Directory__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__s_Servlet_Directory__c</fullName>
    <description>Stores the servlet location which is substituted in formula fields.</description>
    <formula>"/servlet/servlet.Integration?lid="</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>s_Servlet Directory</label>
    <type>Text</type>
</CustomField>