force-app/main/default/objects/Apttus_Proposal__Proposal_Request__c/fields/Apttus_Proposal__Status__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Proposal__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Submitted</fullName>
                <default>true</default>
                <label>Submitted</label>
            </value>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Denied</fullName>
            </value>
            <value>
                <fullName>Add'l Info Needed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>